--- a/hardware.html
+++ b/hardware.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amina Niftaliyeva - Personal Website</title>
+    <title>How Does Hardware Works? - Amina Niftaliyeva</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-container">
-                <div class="logo">Amina Niftaliyeva</div>
+                <a href="index.html" class="logo">Amina Niftaliyeva</a>
                 <div class="social-icons">
                     <a href="https://github.com/Aminaniftaliyeva" target="_blank" rel="noopener noreferrer" class="social-icon" aria-label="GitHub">
                         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
+                <li><a href="index.html#home" class="nav-link">Home</a></li>
+                <li><a href="index.html#about" class="nav-link">About</a></li>
+                <li><a href="index.html#projects" class="nav-link">Projects</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -37,48 +37,35 @@
         </div>
     </nav>
 
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <img src="" alt="Amina Niftaliyeva" class="profile-image" id="profileImage">
-            <h1 class="hero-title">Welcome to My Website</h1>
-            <p class="hero-subtitle">I'm a passionate developer creating amazing things</p>
-            <a href="mailto:Amina.niftaliyeva@outlook.com" class="cta-button">Get In Touch</a>
-        </div>
-        <div class="scroll-indicator">
-            <span></span>
-        </div>
-    </section>
-
-    <section id="about" class="about">
+    <section class="project-hero">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <p>My name is Amina Niftaliyeva, I am ADA University's student. My faculty is School of IT and Engineering, major Mathematics and this website is considered as the place where I am posting my projects and accomplishments.</p>
-                </div>
+            <div class="project-header">
+                <div class="project-icon-large">🚀</div>
+                <h1 class="project-title">How Does Hardware Works?</h1>
+                <a href="index.html#projects" class="back-link">← Back to Projects</a>
             </div>
         </div>
     </section>
 
-    <section id="projects" class="projects">
+    <section class="project-content">
         <div class="container">
-            <h2 class="section-title">Projects</h2>
-            <div class="projects-grid">
-                <a href="hardware.html" class="project-card">
-                    <div class="project-icon">🚀</div>
-                    <h3>How Does Hardware Works?</h3>
-                    <p>Description of your first project goes here.</p>
-                </a>
-                <a href="hour-of-code.html" class="project-card">
-                    <div class="project-icon">💡</div>
-                    <h3>Hour of Code</h3>
-                    <p>Description of your second project goes here.</p>
-                </a>
-                <a href="personal-website.html" class="project-card">
-                    <div class="project-icon">✨</div>
-                    <h3>Personal website</h3>
-                    <p>Description of your third project goes here.</p>
-                </a>
+            <div class="project-details">
+                <h2>Project Overview</h2>
+                <p>This project explores the fundamental workings of computer hardware and how different components interact to create a functional computing system.</p>
+                
+                <h2>Key Features</h2>
+                <ul class="project-list">
+                    <li>Understanding of CPU architecture and processing</li>
+                    <li>Memory systems and storage technologies</li>
+                    <li>Input/output devices and their functions</li>
+                    <li>System integration and component communication</li>
+                </ul>
+
+                <h2>Technologies & Tools</h2>
+                <p>This project involved research and documentation of hardware components, their specifications, and their roles in computer systems.</p>
+
+                <h2>Project Details</h2>
+                <p>Add more details about your project here, including objectives, methodology, results, and any other relevant information.</p>
             </div>
         </div>
     </section>
@@ -92,4 +79,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
 
