Add NOT gate image to hardware project page

--- a/hardware.html
+++ b/hardware.html
@@ -58,6 +58,7 @@
                 <h3>NOT Gate</h3>
                 <p><strong>Definition:</strong> Outputs the opposite of the input.</p>
                 <p><strong>Implementation:</strong> Built on a breadboard using a transistor as the main switching component. When the input button is pressed (HIGH), the transistor switches off, making the output LOW. When the input is not pressed (LOW), the transistor allows current to flow, making the output HIGH. The LED connected to the output visually demonstrates the inverted signal.</p>
+                <img src="assets/not.jpg" alt="NOT Gate breadboard implementation" class="gate-image">
                 
                 <h3>AND Gate</h3>
                 <p><strong>Definition:</strong> Outputs 1 only if both inputs are 1.</p>
