Add AND gate image to hardware project page

--- a/hardware.html
+++ b/hardware.html
@@ -63,6 +63,7 @@
                 <h3>AND Gate</h3>
                 <p><strong>Definition:</strong> Outputs 1 only if both inputs are 1.</p>
                 <p><strong>Implementation:</strong> Constructed using multiple transistors connected in series on the breadboard. Both input buttons must be pressed simultaneously (both inputs HIGH) for the output to be HIGH. If either input is LOW, the output remains LOW. The circuit uses 330 Ω and 2000 Ω resistors to control current flow and protect the components.</p>
+                <img src="assets/and.jpg" alt="AND Gate breadboard implementation" class="gate-image">
                 
                 <h3>OR Gate</h3>
                 <p><strong>Definition:</strong> Outputs 1 if at least one input is 1.</p>
