Add NAND gate image to hardware project page

--- a/hardware.html
+++ b/hardware.html
@@ -73,6 +73,7 @@
                 <h3>NAND Gate</h3>
                 <p><strong>Definition:</strong> Outputs 0 only if both inputs are 1.</p>
                 <p><strong>Implementation:</strong> This gate was built in collaboration with other teams. The NAND gate combines AND logic with NOT logic, essentially inverting the output of an AND gate. When both inputs are HIGH, the output is LOW. For all other input combinations, the output is HIGH. The collaborative approach helped us understand the complexity of combining multiple logic operations.</p>
+                <img src="assets/nand.jpg" alt="NAND Gate breadboard implementation" class="gate-image">
                 
                 <h3>XOR Gate</h3>
                 <p><strong>Definition:</strong> Outputs 1 if inputs are different.</p>
